# windows-opengl

./: ..gitignore.un~  .gitignore  .gitignore~  CMakeLists.txt
source/: CMakeLists.txt  GLoad.h  Window.cpp  Window.h  common.h  glad.c  glad.h  glext.h  main.c  main.cpp  shader.c  shader.h  wglext.h  window.c
